--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -9,16 +9,16 @@
   <article th:class="section_contents">
     <div th:class="heading">
       <div>
-        <h1 th:text="${foundPost.title}">제목</h1>
+        <h1 th:text="${post.title}">제목</h1>
       </div>
       <div th:class="info">
-        <span th:text="${foundPost.author}" th:class="author">아이디</span>
-        <span th:text="'| ' + ${#temporals.format(foundPost.regDate, 'yy-MM-dd HH:mm')}" th:class="reg_date">등록일</span>
-        <input th:id="postIdx" th:type="hidden" th:value="${foundPost.postIdx}"/>
+        <span th:text="${post.author}" th:class="author">아이디</span>
+        <span th:text="'| ' + ${#temporals.format(post.regDate, 'yy-MM-dd HH:mm')}" th:class="reg_date">등록일</span>
+        <input th:type="hidden" th:id="postIdx" th:value="${post.postIdx}"/>
       </div>
     </div>
     <div th:class="content">
-      <p th:text="${foundPost.content}">본문</p>
+      <p th:text="${post.content}">본문</p>
     </div>
     <div th:class="btn_box">
       <div th:class="left_btn">
