refactor: 불필요한 th: 속성 제거

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <header th:replace="~{layout/fragment/header :: header}"></header>
-<section th:class="section">
-  <article th:class="section_intro">
-    <span th:class="heading">
+<section class="section">
+  <article class="section_intro">
+    <span class="heading">
       <i class="fa-solid fa-skull-crossbones"></i>
       Notice
     </span>
