--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -5,33 +5,33 @@
 </head>
 <body>
 <header th:replace="~{layout/fragment/header :: header}"></header>
-<section th:class="section">
-  <form th:class="post_form" th:object="${post}" th:method="post">
-    <div th:class="|form_top item|">
-      <div th:class="author">
+<section class="section">
+  <form class="post_form" th:object="${post}" th:method="post">
+    <div class="form_top item">
+      <div class="author">
         <label th:for="author">글쓴이</label>
         <input th:type="text" th:value="${post.author}">
       </div>
-      <div th:class="password">
+      <div class="password">
         <label th:for="password">비밀번호</label>
         <input type="password" th:value="${post.password}" th:maxlength="10">
       </div>
     </div>
-    <div th:class="notice">
+    <div class="notice">
       <p>1) 간단한 비밀번호를 사용하면 타인이 수정 또는 삭제할 수 있습니다.<br>
         2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
     </div>
-    <div th:class="|title item|">
+    <div class="title item">
       <input th:type="text" th:value="${post.title}" th:size="80">
     </div>
-    <div th:class="|content item|">
+    <div class="content item">
       <textarea th:text="${post.content}" th:rows="30" th:cols="82"></textarea>
     </div>
-    <div th:class="btn">
-      <button th:type="button" th:class="btn_modify">
+    <div class="btn">
+      <button th:type="button" class="btn_modify">
         <i class="fa-solid fa-check fa-xs"></i>수정
       </button>
-      <button th:type="button" th:class="btn_cancel">
+      <button th:type="button" class="btn_cancel">
         <i class="fa-solid fa-xmark fa-xs"></i>취소
       </button>
     </div>
