--- a/src/main/resources/templates/layout/fragment/footer.html
+++ b/src/main/resources/templates/layout/fragment/footer.html
@@ -1,5 +1,5 @@
-<footer th:class="footer" th:fragment="footer">
-  <div th:class="footer_right">
+<footer class="footer" th:fragment="footer">
+  <div class="footer_right">
     <p>Copyright 2022 pamphBoard | All right reserved.</p>
   </div>
 </footer>
