--- a/src/main/resources/templates/layout/fragment/header.html
+++ b/src/main/resources/templates/layout/fragment/header.html
@@ -1,11 +1,11 @@
 <header th:fragment="header">
-  <nav th:class="navbar">
-    <div th:class="navbar_logo">
+  <nav class="navbar">
+    <div class="navbar_logo">
       <a th:href="@{/}">
-        <img th:src="@{/images/logos/pamphBoard-logo.png}" th:width="100"/>
+        <img th:src="@{/images/logos/pamphBoard-logo.png}" width="100"/>
       </a>
     </div>
-    <ul th:class="navbar_menu">
+    <ul class="navbar_menu">
       <li>
         <a th:href="@{/}">Home</a>
       </li>
@@ -13,7 +13,7 @@
         <a th:href="@{/post/list}">Board</a>
       </li>
     </ul>
-    <ul th:class="navbar_link_icons">
+    <ul class="navbar_link_icons">
       <li>
         <a th:href="@{https://www.facebook.com/profile.php?id=100069028367348}" th:target="_blank">
           <i class="fa-brands fa-facebook"></i>
