--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -9,12 +9,12 @@
   <form class="post_form" th:action="@{/post/save/new}" th:object="${PostDto}" th:method="post">
     <div class="form_top item">
       <div class="author">
-        <label th:for="author">글쓴이</label>
-        <input th:type="text" th:field="*{author}" th:placeholder="|이름을 입력하세요.|" th:required>
+        <label for="author">글쓴이</label>
+        <input type="text" th:field="*{author}" th:placeholder="|이름을 입력하세요.|" th:required>
       </div>
       <div class="password">
-        <label th:for="password">비밀번호</label>
-        <input type="password" th:field="*{password}" th:placeholder="|비밀번호를 입력하세요.|" th:maxlength="10" th:required>
+        <label for="password">비밀번호</label>
+        <input type="password" th:field="*{password}" th:placeholder="|비밀번호를 입력하세요.|" maxlength="10" th:required>
       </div>
     </div>
     <div class="notice">
@@ -22,10 +22,10 @@
         2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
     </div>
     <div class="title item">
-      <input th:type="text" th:field="*{title}" th:size="80" th:placeholder="|제목을 입력하세요.|" th:required>
+      <input type="text" th:field="*{title}" size="80" th:placeholder="|제목을 입력하세요.|" th:required>
     </div>
     <div class="content item">
-      <textarea th:field="*{content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" th:required></textarea>
+      <textarea th:field="*{content}" rows="30" cols="82" th:placeholder="|내용을 입력하세요.|" th:required></textarea>
     </div>
     <div class="btn">
       <button th:type="button" class="btn_save">
