--- a/src/main/resources/templates/layout/fragment/header.html
+++ b/src/main/resources/templates/layout/fragment/header.html
@@ -15,22 +15,22 @@
     </ul>
     <ul class="navbar_link_icons">
       <li>
-        <a th:href="@{https://www.facebook.com/profile.php?id=100069028367348}" th:target="_blank">
+        <a th:href="@{https://www.facebook.com/profile.php?id=100069028367348}" target="_blank">
           <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
-        <a th:href="@{https://twitter.com/YNNNzpOjL9YYgJZ}" th:target="_blank">
+        <a th:href="@{https://twitter.com/YNNNzpOjL9YYgJZ}" target="_blank">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li>
-        <a th:href="@{https://rosepamphyle42.tistory.com}" th:target="_blank">
+        <a th:href="@{https://rosepamphyle42.tistory.com}" target="_blank">
           <i class="fa-solid fa-t"></i>
         </a>
       </li>
       <li>
-        <a th:href="@{https://github.com/dyddlfsla}" th:target="_blank">
+        <a th:href="@{https://github.com/dyddlfsla}" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
