--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -14,7 +14,7 @@
       <div class="info">
         <span th:text="${post.author}" class="author">아이디</span>
         <span th:text="'| ' + ${#temporals.format(post.regDate, 'yy-MM-dd HH:mm')}" class="reg_date">등록일</span>
-        <input th:type="hidden" th:id="postIdx" th:value="${post.postIdx}"/>
+        <input th:type="hidden" id="postIdx" th:value="${post.postIdx}"/>
       </div>
     </div>
     <div class="content">
@@ -22,22 +22,22 @@
     </div>
     <div class="btn_box">
       <div class="left_btn">
-        <button th:type="button" class="btn_return_list">
+        <button type="button" class="btn_return_list">
           <i class="fa-solid fa-bars fa-xs"></i>목록
         </button>
       </div>
       <div class="right_btn">
-        <button th:type="submit" class="btn_modify">
+        <button type="submit" class="btn_modify">
           <i class="fa-solid fa-pen-to-square fa-xs"></i>수정
         </button>
-        <button th:type="button" class="btn_delete">
+        <button type="button" class="btn_delete">
           <i class="fa-solid fa-trash-can fa-xs"></i>삭제
         </button>
       </div>
     </div>
     <div class="verify_box">
-      <label th:for="password">비밀번호</label>
-      <input th:id="password" th:type="password">
+      <label for="password">비밀번호</label>
+      <input id="password" type="password">
       <span class="verify_cancel">
         <i class="fa-solid fa-xmark"></i>
       </span>
@@ -46,6 +46,6 @@
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 <script th:src="@{/js/jquery/jquery-3.6.0.js}"></script>
-<script th:inline="javascript" th:src="@{/js/post_read.js}"></script>
+<script th:src="@{/js/post_read.js}"></script>
 </body>
 </html>
