refactor: 불필요한 th: 속성 제거

--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -27,7 +27,7 @@
       </tbody>
     </table>
     <div class="board_button">
-        <button th:type="button" th:onclick="|location.href='@{/post/save}'|">
+        <button type="button" th:onclick="|location.href='@{/post/save}'|">
           <i class="fa-solid fa-pencil fa-xs"></i>글쓰기
         </button>
     </div>
