--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -6,15 +6,15 @@
 <body>
 <header th:replace="~{layout/fragment/header :: header}"></header>
 <section class="section">
-  <form class="post_form" th:object="${post}" method="post">
+  <form class="post_form" th:object="${post}">
     <div class="form_top item">
       <div class="author">
-        <label for="author">글쓴이</label>
-        <input th:field="*{author}" type="text" th:value="${post.author}">
+        <label th:for="author">글쓴이</label>
+        <input type="text" th:field="*{author}">
       </div>
       <div class="password">
-        <label for="password">비밀번호</label>
-        <input th:field="*{password}" type="password" th:value="${post.password}" maxlength="10">
+        <label th:for="password">비밀번호</label>
+        <input type="password" th:field="*{password}" maxlength="10">
       </div>
     </div>
     <div class="notice">
@@ -22,16 +22,16 @@
         2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
     </div>
     <div class="title item">
-      <input type="text" th:value="${post.title}" size="80">
+      <input type="text" th:field="*{title}" size="80">
     </div>
     <div class="content item">
       <textarea th:text="${post.content}" rows="30" cols="82"></textarea>
     </div>
     <div class="btn">
-      <button th:type="button" class="btn_modify">
+      <button type="button" class="btn_modify">
         <i class="fa-solid fa-check fa-xs"></i>수정
       </button>
-      <button th:type="button" class="btn_cancel">
+      <button type="button" class="btn_cancel">
         <i class="fa-solid fa-xmark fa-xs"></i>취소
       </button>
     </div>
