--- a/src/main/resources/static/css/post/post_modify.css
+++ b/src/main/resources/static/css/post/post_modify.css
@@ -32,10 +32,18 @@
   height: 20px;
 }
 
+.notice_title {
+  padding: 0px 110px;
+  margin-bottom: 5px;
+}
+
+.notice_content {
+  padding: 0px 105px;
+  margin: 0px;
+}
+
 .notice p {
-  padding-left: 100px;
-  margin-bottom: 0px;
-  font-size: 12px;
+  font-size: 11px;
   color: dimgray;
 }
 
