--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -18,8 +18,14 @@
       </div>
     </div>
     <div class="notice">
-      <p>1) 간단한 비밀번호를 사용하면 타인이 수정 또는 삭제할 수 있습니다.<br>
-        2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
+      <p class="notice_title">
+        <i class="fa-solid fa-triangle-exclamation"></i> 주의사항
+      </p>
+      <p class="notice_content">
+        * 간단한 비밀번호를 사용하면 타인이 수정 또는 삭제할 수 있습니다.<br>
+        * 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.<br>
+        * 글쓴이, 비밀번호는 수정 불가합니다.
+      </p>
     </div>
     <div class="title item">
       <input type="text" th:field="*{title}" size="80">
