--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -36,8 +36,8 @@
       </div>
     </div>
     <div class="verify_box">
-      <label for="password">비밀번호</label>
-      <input id="password" type="password">
+      <label for="password">비밀번호 확인</label>
+      <input id="password" type="password" placeholder="입력 후 Enter">
       <span class="verify_cancel">
         <i class="fa-solid fa-xmark"></i>
       </span>
