--- a/src/main/resources/templates/layout/fragment/common_head.html
+++ b/src/main/resources/templates/layout/fragment/common_head.html
@@ -3,7 +3,7 @@
   <title>pamphBoard</title>
   <link th:rel="icon" th:href="@{/images/favicon/pb_favicon_88i_icon.ico}">
   <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
-  <link th:href="@{/css/nav.css}" th:rel="stylesheet">
-  <link th:href="@{/css/footer.css}" th:rel="stylesheet">
+  <link th:href="@{/css/common/nav.css}" th:rel="stylesheet">
+  <link th:href="@{/css/common/footer.css}" th:rel="stylesheet">
   <th:block th:replace="${links}"/>
 </head>
