--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -46,6 +46,6 @@
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 <script th:src="@{/js/jquery/jquery-3.6.0.js}"></script>
-<script th:src="@{/js/post_read.js}"></script>
+<script th:src="@{/js/post/post_read.js}"></script>
 </body>
 </html>
