--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -43,6 +43,6 @@
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 <script th:src="@{/js/jquery/jquery-3.6.0.js}"></script>
-<script th:src="@{/js/post_save.js}"></script>
+<script th:src="@{/js/post/post_save.js}"></script>
 </body>
 </html>
