--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -33,7 +33,7 @@
     </div>
     <div class="btn">
       <button type="button" class="btn_save">
-        <i class="fa-solid fa-check fa-xs"></i>확인
+        <i class="fa-solid fa-check fa-xs"></i>완료
       </button>
       <button type="button" class="btn_cancel">
         <i class="fa-solid fa-xmark fa-xs"></i>취소
