refactor: js/fragment 적용

--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -34,5 +34,6 @@
   </article>
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
+<th:block th:replace="~{layout/fragment/common_js :: common_js(~{::script})}"></th:block>
 </body>
 </html>
