--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -42,7 +42,7 @@
   </form>
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
-<script th:src="@{/js/jquery/jquery-3.6.0.js}"></script>
+<th:block th:replace="~{layout/fragment/common_js.html :: common_js(~{::script})}"></th:block>
 <script th:src="@{/js/post/post_save.js}"></script>
 </body>
 </html>
