--- a/src/main/resources/templates/layout/fragment/header.html
+++ b/src/main/resources/templates/layout/fragment/header.html
@@ -6,10 +6,10 @@
       </a>
     </div>
     <ul class="navbar_menu">
-      <li>
+      <li class="home">
         <a th:href="@{/}">Home</a>
       </li>
-      <li>
+      <li class="post">
         <a th:href="@{/post/list}">Board</a>
       </li>
     </ul>
