refactor: common.css 분리

--- a/src/main/resources/templates/layout/fragment/common_head.html
+++ b/src/main/resources/templates/layout/fragment/common_head.html
@@ -3,6 +3,7 @@
   <title>pamphBoard</title>
   <link th:rel="icon" th:href="@{/images/favicon/pamphboard_favicon_001.ico}">
   <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
+  <link th:href="@{/css/common/common.css}" th:rel="stylesheet">
   <link th:href="@{/css/common/nav.css}" th:rel="stylesheet">
   <link th:href="@{/css/common/footer.css}" th:rel="stylesheet">
   <th:block th:replace="${links}"/>
