--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -31,6 +31,14 @@
           <i class="fa-solid fa-pencil fa-xs"></i>글쓰기
         </button>
     </div>
+    <div class="board_pagination">
+      <span class="previous"><a th:href="@{#}">이전</a></span>
+      <a class="page_number" th:href="@{#}">1</a>
+      <a class="page_number" th:href="@{#}">2</a>
+      <a class="page_number" th:href="@{#}">3</a>
+      <a class="page_number" th:href="@{#}">4</a>
+      <span class="next"><a th:href="@{#}">다음</a></span>
+    </div>
   </article>
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
