--- a/src/main/resources/static/css/post/post_read.css
+++ b/src/main/resources/static/css/post/post_read.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 80px;
-  width: 800px;
+  width: 850px;
 }
 
 .heading {
@@ -54,14 +54,14 @@
   border-radius: 5px;
   letter-spacing: 3px;
   border: none;
-  background-color: var(--color-four);
+  background-color: var(--color-two);
   color: white;
   font-size: 14px;
   width: 85px;
   height: 35px;
 }
 
-.btn_box button:hover {
+button.btn_delete {
   background-color: var(--color-six);
 }
 
@@ -72,7 +72,7 @@
 .verify_box {
   visibility: hidden;
   width: 230px;
-  margin-left: 550px;
+  margin-left: 600px;
   border: 2px solid var(--color-two);
   padding: 15px 5px;
   display: flex;
