--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -11,10 +11,10 @@
       <caption>자유 게시판</caption>
       <thead>
       <tr>
-        <th>번호</th>
-        <th>제목</th>
-        <th>글쓴이</th>
-        <th>등록일</th>
+        <th class="table_no">번호</th>
+        <th class="table_title">제목</th>
+        <th class="table_author">글쓴이</th>
+        <th class="table_regDate">등록일</th>
       </tr>
       </thead>
       <tbody>
