--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -34,7 +34,7 @@
     <div class="board_pagination">
       <span class="previous"><a th:href="@{#}">이전</a></span>
       <th:block th:each="numberOfPage : ${#numbers.sequence(pagination.minPage, pagination.maxPage)}">
-        <a th:href="@{/post/list(currentPage=${numberOfPage})}" th:text="${numberOfPage}">페이지 번호</a>
+        <a th:href="@{/post/list(currentPage=${numberOfPage})}" th:text="${numberOfPage}" th:class="((${numberOfPage} == ${pagination.currentPage})? 'pageOn' : 'pageOff')">페이지 번호</a>
       </th:block>
       <span class="next"><a th:href="@{#}">다음</a></span>
     </div>
