design: board_list 크기 고정

--- a/src/main/resources/static/css/post/post_list.css
+++ b/src/main/resources/static/css/post/post_list.css
@@ -59,8 +59,6 @@ tr td:nth-child(2) {
   font-size: 14px;
 }
 
-
-
 td > a {
   color: #000;
 }
@@ -71,6 +69,10 @@ td > a:visited {
 
 td > a:hover {
   text-decoration: underline;
+}
+
+.board_list {
+  height: 516px;
 }
 
 .board_button {
