--- a/src/main/resources/static/css/post/post_list.css
+++ b/src/main/resources/static/css/post/post_list.css
@@ -106,15 +106,20 @@ td > a:hover {
 .board_pagination {
   display: flex;
   justify-content: center;
-}
-
-.board_pagination span, .board_pagination a {
+  font-size: 15px;
   color: #000;
   padding: 0px 7px;
   font-weight: bold;
 }
 
-.pageOn, .pageOn:visited {
+.board_pagination a {
+  font-size: 15px;
+  color: #000;
+  padding: 0px 7px;
+  font-weight: bold;
+}
+
+a.pageOn {
   color: var(--color-two);
   text-decoration: underline;
 }
