rename: js 파일명 수정

--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -43,6 +43,6 @@
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 <th:block th:replace="~{layout/fragment/common_js.html :: common_js(~{::script})}"></th:block>
-<script th:src="@{/js/post/post_save.js}"></script>
+<script th:src="@{/js/post/save.js}"></script>
 </body>
 </html>
