--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -46,6 +46,6 @@
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 <th:block th:replace="~{layout/fragment/common_js.html :: common_js(~{::script})}"></th:block>
-<script th:src="@{/js/post/post_read.js}"></script>
+<script th:src="@{/js/post/read.js}"></script>
 </body>
 </html>
